controllers z-index fix

--- a/src/link/style.scss
+++ b/src/link/style.scss
@@ -373,6 +373,7 @@ body {
 				border-top-right-radius: 4px;
 				border-bottom-right-radius: 4px;
 				padding: 3px;
+				z-index: 1000;
 
 				&:hover {
 					cursor: pointer;
@@ -485,6 +486,7 @@ body {
 						border: solid 1px #ccc;
 						font-size: 16px;
 						box-shadow: 0 2px 2px #1e1e1e;
+						z-index: 1000;
 
 						&-menu {
 							height: 20px;
